line overflow problem fixed.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -271,11 +271,6 @@ pre {
     background: $other-background-color;
     border: 1px solid $border-main-color;
     padding: 0.25rem;
-    overflow-x: scroll;
-    white-space: pre;
-    white-space: -o-pre;
-    white-space: -moz-pre;
-    white-space: -webkit-pre;
 }
 
 code {
@@ -285,6 +280,7 @@ code {
     border: 1px solid $border-main-color;
     padding: 0.25rem;
     overflow-x: scroll;
+    overflow-wrap: normal;
     white-space: pre;
     white-space: -o-pre;
     white-space: -moz-pre;
